--- a/index-1-5.html
+++ b/index-1-5.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML 1 To 5</title>
   </head>
-  <body></body>
+  <body>
+    Empty
+  </body>
 </html>
