--- a/index-6-10.html
+++ b/index-6-10.html
@@ -20,6 +20,56 @@
     <title>Html-6-10</title>
   </head>
   <body>
-    HTML 6 To 10
+    <!-- ( 1 ) -->
+    <!-- 1 - <!DOCTYPE html> -->
+    <!-- 2 - Without DOCTYPE -->
+    <!-- 3 - No -->
+    <!-- 4 - No -->
+    <!-- 5 - h1 to h6  -->
+
+    <!-- ( 2 ) -->
+    <!-- 1 - No  -->
+
+    <!-- ( 3 ) -->
+    <!-- 1 - No -->
+
+    <!-- ( 4 ) -->
+    <!-- 1 - No -->
+
+    <!-- ( 5 ) -->
+    <!-- 1 - Global Attribute
+    2 - No Global Attribute
+    3 - No Global Attribute
+    4 - Global Attribute
+    5 - No Global Attribute
+    6 - Global Attribute
+    7 - Global Attribute
+    8 - No Global Attribute -->
+
+    <h1>Book Stroe</h1>
+    <p>This Is my Book Store And i Will Show to You Some Of My Books Today</p>
+    <hr />
+    <h2>( 1 ) Fictional Books</h2>
+    <h3>1 - First Book</h3>
+    <p>About First</p>
+    <h4>2 - Second Book</h4>
+    <p>About Second</p>
+    <h4>3 - Third Boook</h4>
+    <p>About Third</p>
+    <hr />
+    <h2>( 2 ) Romantic Book</h2>
+    <h3>1 - First Book</h3>
+    <p>About First</p>
+    <h4>2 - Second Book</h4>
+    <p>About Second</p>
+    <h4>3 - Third Boook</h4>
+    <p>About Third</p>
+
+    <h1>My Page</h1>
+    <h4>This Is My First Page</h4>
+    <h4>This Is My First Work</h4>
+
+    <h2>Section One</h2>
+    <h5>This Is Section One</h5>
   </body>
 </html>
