--- a/index-11-14.html
+++ b/index-11-14.html
@@ -9,5 +9,61 @@
     <meta name="revised" content="Monday , April 28th , 2025 , 06:13 pm" />
     <title>11 To 14</title>
   </head>
-  <body></body>
+  <body>
+    <h1>My Info</h1>
+    <p>My Name Is : <b>Omar Sayed</b></p>
+    <p>I'm <strong>Avialable</strong> Here</p>
+    <p>
+      My Hour Old Price is <del>10$</del> And The New Price Is <mark>30$</mark>
+    </p>
+    <p>
+      Visit my Website frome This Link
+      <a href="https://www.facebook.com" target="_blank">My Acount</a>
+    </p>
+    <hr />
+    <h2>Here Is Some One Of My Clients</h2>
+    <img
+      src=""
+      alt=""
+      width="50px"
+      height="50px"
+      style="background-color: red"
+    />
+    <img
+      src=""
+      alt=""
+      width="50px"
+      height="50px"
+      style="background-color: blue"
+    />
+    <img
+      src=""
+      alt=""
+      width="50px"
+      height="50px"
+      style="background-color: green"
+    />
+    <hr>
+    <h2>My Skills</h2>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JS
+        <ul><li>Angular</li>
+        <li>React</li>
+        <li>Vue
+          <ol start="4">
+            <li>V4.0</li>
+            <li>V5.0</li>
+            <li>V6.0</li>
+            <li>V7.0</li>
+            <li>V8.0</li>
+          </ol>
+        </li>
+        <li>Sevelte</li>
+      </li>
+      </ul>
+      <li>Python</li>
+    </ul>
+  </body>
 </html>
