--- a/index-15-18.html
+++ b/index-15-18.html
@@ -10,98 +10,43 @@
     <title>Index 15 To 18</title>
   </head>
   <body>
-    <table border="1" width="100%" style="text-align: center">
-      <caption>
-        Mebers Data
+    <table
+      style="text-align: center"
+      border="2"
+      width="50%"
+      cellpadding="10px "
+    >
+      <caption style="margin: 10px">
+        Table Caption
       </caption>
 
       <thead>
         <tr>
-          <th>Group</th>
-          <th>Avatar</th>
+          <th>Date</th>
           <th>Name</th>
-          <th>Email</th>
-          <th>Character</th>
-          <th>Profile</th>
+          <th>Points</th>
         </tr>
       </thead>
+
       <tbody>
         <tr>
-          <td rowspan="2">Ninja</td>
-          <td>
-            <img
-              width="40px"
-              height="40px"
-              src=""
-              alt=""
-              style="background-color: red"
-            />
-          </td>
-          <td>
-            Osama
-            <br />
-            Mohamed
-          </td>
-          <td>
-            On@n.com
-            <hr />
-            Sa@n.com
-          </td>
-          <td>&copy;</td>
-          <td>
-            <a href="https://www.facebook.com" target="_blank">Profile</a>
-          </td>
+          <td rowspan="4">Month</td>
+          <td>Omar Syaed</td>
+          <td>100</td>
         </tr>
         <tr>
-          <td>
-            <img
-              width="40px"
-              height="40px"
-              src=""
-              alt=""
-              style="background-color: blue"
-            />
-          </td>
-          <td>
-            Shady
-            <br />
-            Nabil
-          </td>
-          <td>S@on.com</td>
-          <td>&trade;</td>
-          <td>
-            <a href="https://www.facebook.com" target="_blank">Profile</a>
-          </td>
+          <td>Osama Mohamed</td>
+          <td>250</td>
         </tr>
         <tr>
-          <td>Monster</td>
-          <td>
-            <img
-              width="40px"
-              height="40px"
-              src=""
-              alt=""
-              style="background-color: black"
-            />
-          </td>
-          <td>
-            Mohamed
-            <br />
-            Ibrahim
-          </td>
-          <td>M@nna.com</td>
-          <td>&#174;</td>
-          <td>
-            <a href="https://www.facebook.com" target="_blank">Profile</a>
-          </td>
+          <td>Rady hassan</td>
+          <td>130</td>
+        </tr>
+        <tr>
+          <td>Gamal Adel</td>
+          <td>400</td>
         </tr>
       </tbody>
-      <tfoot>
-        <td colspan="5">Total Members</td>
-        <td>3</td>
-      </tfoot>
     </table>
-
-    <img src="https://via.placeholder.com/40/f00" />
   </body>
 </html>
