Second Time To Added Code After I Learned Fronm 15 To 18

--- a/index.html
+++ b/index.html
@@ -125,5 +125,136 @@
     <a style="display: block" target="_blank" href="https://www.google.com"
       >This Site If Want To Search About Me</a
     >
+    <hr />
+
+    <!-- ................................... -->
+
+    <div style="padding: 20px; border: 1px solid black">
+      <h3>For Div</h3>
+      <p>
+        <b>Lorem</b> ipsum dolor, sit amet consectetur adipisicing elit. Hic
+        <span style="background-color: black; color: white">voluptatibus</span>
+        tenetur, dolorem non at ipsum. Minus aperiam explicabo inventore in
+        aspernatur consequatur quas, voluptatibus distinctio sed? Voluptatem
+        facere quis accusantium porro? Accusamus, magni explicabo! Iusto sequi
+        aut harum ratione incidunt veniam est, impedit illum? Placeat nam, illo
+        eos molestiae, cum sint cupiditate atque laboriosam, magnam veniam amet
+        temporibus unde non velit eum mollitia similique quidem voluptatem
+        corporis. Praesentium sunt neque tempore nesciunt natus ipsam
+        repellendus atque? Nesciunt sequi perferendis enim quidem, a modi?
+        Ducimus consectetur, similique asperiores necessitatibus voluptate
+        provident, obcaecati ut atque quibusdam soluta qui commodi praesentium
+        minima ipsum?
+      </p>
+      <p>
+        <mark>Lorem</mark> ipsum dolor sit, amet consectetur
+        <span style="color: blueviolet">adipisicing</span> elit. Quos, vel!
+      </p>
+    </div>
+
+    <hr />
+
+    <table
+      border="2px"
+      width="100%"
+      cellspacing="5"
+      cellpadding="20px"
+      style="text-align: center"
+    >
+      <caption style="border: 1px solid black; padding: 15px">
+        OS Group
+      </caption>
+
+      <thead>
+        <th style="visibility: hidden"></th>
+        <th>Logo</th>
+        <th>Name of Own</th>
+        <th>History</th>
+        <th>color</th>
+        <th>cars</th>
+        <th>Impor Employ</th>
+        <th>Location</th>
+        <th>Many Of Branches</th>
+        <th>Salary</th>
+        <th>Stocks</th>
+      </thead>
+
+      <tbody>
+        <tr>
+          <td>1970</td>
+          <td>ons</td>
+          <td>Omar</td>
+          <td>719</td>
+          <td>red</td>
+          <td>VolksWagen</td>
+          <td>hr Yaen</td>
+          <td>London</td>
+          <td>3</td>
+          <td>1,000,000$</td>
+          <td>17</td>
+        </tr>
+        <tr>
+          <td>1980</td>
+          <td>ons</td>
+          <td>Omar</td>
+          <td>719</td>
+          <td>red</td>
+          <td>VolksWagen</td>
+          <td>hr Yaen</td>
+          <td>London</td>
+          <td>3</td>
+          <td>1,000,000$</td>
+          <td>17</td>
+        </tr>
+        <tr>
+          <td>1990</td>
+          <td>ons</td>
+          <td>Omar</td>
+          <td>719</td>
+          <td>red</td>
+          <td>VolksWagen</td>
+          <td>hr Yaen</td>
+          <td>London</td>
+          <td>3</td>
+          <td>1,000,000$</td>
+          <td>17</td>
+        </tr>
+        <tr>
+          <td>2000</td>
+          <td>ons</td>
+          <td>Omar</td>
+          <td>719</td>
+          <td>red</td>
+          <td>VolksWagen</td>
+          <td>hr Yaen</td>
+          <td>London</td>
+          <td>3</td>
+          <td>1,000,000$</td>
+          <td>17</td>
+        </tr>
+        <tr>
+          <td>2010</td>
+          <td>ons</td>
+          <td>Omar</td>
+          <td>719</td>
+          <td>red</td>
+          <td>VolksWagen</td>
+          <td>hr Yaen</td>
+          <td>London</td>
+          <td>3</td>
+          <td>1,000,000$</td>
+          <td>17</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td colspan="11">
+            Thank You For Writing That Informations About Our Company , We Are
+            So Happy , So We Will invite You To Make IterView Because We Think
+            You Will Success With Us
+          </td>
+        </tr>
+      </tfoot>
+    </table>
   </body>
 </html>
