--- a/index-19-23.html
+++ b/index-19-23.html
@@ -9,5 +9,20 @@
     <meta name="revised" content="wednsday , aprill 30th , 2025 , 06:53 pm" />
     <title>Index-19-23</title>
   </head>
-  <body></body>
+  <body>
+    <p>( 1 ) &#10004;</p>
+    <p>( 2 ) &#10004;</p>
+    <p>( 3 ) &#10004;</p>
+    <p>( 4 ) &#10004;</p>
+    <p>( 5 ) &#10004;</p>
+    <p>( 6 ) &#10004;</p>
+    <p>( 8 ) &#10004;</p>
+    <p>( 9 ) &#10004;</p>
+    <p>( 10 ) &#10006; ...</p>
+    <p>( 11 ) &#10006; ...</p>
+    <p>( 12 ) &#10006; ...</p>
+    <p>( 13 ) &#10004;</p>
+    <p>( 14 ) &#10006; ...</p>
+    <p>( 15 ) &#10006; ...</p>
+  </body>
 </html>
