--- a/index-19-23.html
+++ b/index-19-23.html
@@ -9,140 +9,12 @@
     <meta name="revised" content="wednsday , aprill 30th , 2025 , 06:53 pm" />
     <title>Index-19-23</title>
   </head>
-  <body style="padding: 0 10px">
-    <header style="display: flex; border: 1px solid black; margin: 20px 0">
-      <b>Logo</b>
-
-      <nav>
-        <ul style="display: flex">
-          <li style="padding: 10px"><a href="https://google.com">Main</a></li>
-          <li style="padding: 10px">
-            <a href="https://google.com">Courses</a>
-          </li>
-          <li style="padding: 10px">
-            <a href="https://google.com">Section</a>
-          </li>
-          <li style="padding: 10px">
-            <a href="https://google.com">About US</a>
-          </li>
-          <li style="padding: 10px">
-            <a href="https://google.com">Contact Us</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-
-    <section
-      style="
-        display: flex;
-        border: 1px solid black;
-        padding: 20px;
-        text-align: center;
-      "
-    >
-      <aside
-        style="
-          display: inline;
-          width: 20%;
-          text-align: center;
-          border: 1px solid black;
-          padding: 20px;
-        "
-      >
-        <article>
-          This <br />Is <br />
-          Aside <br />This <br />
-          Is <br />A Sidebar
-          <br />
-          This <br />Is <br />
-          Aside <br />This <br />
-          Is <br />A Sidebar
-          <br />
-          This <br />Is <br />
-          Aside <br />This <br />
-          Is <br />A Sidebar
-          <br />
-          This <br />Is <br />
-          Aside <br />This <br />
-          Is <br />A Sidebar
-          <br />
-          This <br />Is <br />
-          Aside <br />This <br />
-          Is <br />A Sidebar
-        </article>
-      </aside>
-      <div style="display: inline; width: 10%"></div>
-      <main
-        style="
-          display: inline;
-          width: 59%;
-          border: 1px solid black;
-          padding: 20px;
-        "
-      >
-        <section style="display: flex">
-          <article style="display: inline; width: 40%; height: 40%">
-            <h2>This IS The First Article</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat
-              dignissimos qui repellendus harum distinctio neque possimus odit
-              nisi cum labore, recusandae quo sequi ipsum maxime. Voluptate
-              totam ab aperiam numquam laborum quas quis quisquam modi
-              reprehenderit suscipit, debitis corporis, alias laboriosam. Animi
-              eveniet quisquam eius iste cumque labore doloribus beatae!
-            </p>
-          </article>
-          <div style="display: inline; width: 10%; height: 10%"></div>
-          <article style="display: inline; width: 40%; height: 40%">
-            <h2>This IS The Second Article</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat
-              dignissimos qui repellendus harum distinctio neque possimus odit
-              nisi cum labore, recusandae quo sequi ipsum maxime. Voluptate
-              totam ab aperiam numquam laborum quas quis quisquam modi
-              reprehenderit suscipit, debitis corporis, alias laboriosam. Animi
-              eveniet quisquam eius iste cumque labore doloribus beatae!
-            </p>
-          </article>
-        </section>
-
-        <section style="display: flex">
-          <article style="display: inline; width: 40%; height: 40%">
-            <h2>This IS The Third Article</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat
-              dignissimos qui repellendus harum distinctio neque possimus odit
-              nisi cum labore, recusandae quo sequi ipsum maxime. Voluptate
-              totam ab aperiam numquam laborum quas quis quisquam modi
-              reprehenderit suscipit, debitis corporis, alias laboriosam. Animi
-              eveniet quisquam eius iste cumque labore doloribus beatae!
-            </p>
-          </article>
-          <div style="display: inline; width: 10%; height: 10%"></div>
-          <article style="display: inline; width: 40%; height: 40%">
-            <h2>This IS The Fourth Article</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat
-              dignissimos qui repellendus harum distinctio neque possimus odit
-              nisi cum labore, recusandae quo sequi ipsum maxime. Voluptate
-              totam ab aperiam numquam laborum quas quis quisquam modi
-              reprehenderit suscipit, debitis corporis, alias laboriosam. Animi
-              eveniet quisquam eius iste cumque labore doloribus beatae!
-            </p>
-          </article>
-        </section>
-      </main>
-    </section>
-
-    <footer style="border: 1px solid black; text-align: center; margin: 20px 0">
-      <section>
-        <p>
-          <b
-            >Welcome My To My Site , I Own This This And this Is My Coppyright
-            <span style="font-size: 25px"><b>&copy;</b></span></b
-          >
-        </p>
-      </section>
-    </footer>
+  <body>
+    <audio controls autoplay loop>
+      <source src="Mahansh Aleik.mp3" type="audio/mpeg" />
+      <source src="Mahansh Aleik.oog" type="audio/oog" />
+      <source src="Mahansh Aleik.wav" type="audio/wav" />
+      Sorry Your Borowser Is Not Supported
+    </audio>
   </body>
 </html>
