--- a/index-19-23.html
+++ b/index-19-23.html
@@ -10,11 +10,14 @@
     <title>Index-19-23</title>
   </head>
   <body>
-    <audio controls autoplay loop>
-      <source src="Mahansh Aleik.mp3" type="audio/mpeg" />
-      <source src="Mahansh Aleik.oog" type="audio/oog" />
-      <source src="Mahansh Aleik.wav" type="audio/wav" />
-      Sorry Your Borowser Is Not Supported !
-    </audio>
+   <video controls autoplay muted poster="vlcsnap-2025-01-12-18h32m00s691.png" width="600px" height="360px" >
+    <source src="My first Avatar Video.mp4" type="video/mp4">
+    <source src="My first Avatar Video.oog" type="video/oog">
+    <source src="My first Avatar Video.wav" type="video/wav">
+    Sorry Your Browser Is Not Supported
+    post
+    <track src="README.md" kind="subtitles" srclang="en"  label="English"></track>
+    <track src="README.md" kind="subtitles" srclang="it" label="italian"></track>
+   </video>
   </body>
 </html>
