Third Time To Added Code After I Learned Fronm 19 - 23

--- a/index.html
+++ b/index.html
@@ -19,242 +19,293 @@
     <!-- The Title Writing On The Tab -->
     <title>Html-1-15</title>
   </head>
-  <body>
-    <h1>Hello Everyone Visted My Site I'm So Happy For That , Thanks</h1>
-    <hr />
-    <img
-      width="9.5%"
-      height="100px"
-      src=""
-      alt=""
-      style="background-color: aqua"
-    />
-    <img
-      width="9.5%"
-      height="100px"
-      src=""
-      alt=""
-      style="background-color: aquamarine"
-    />
-    <img
-      width="9.5%"
-      height="100px"
-      src=""
-      alt=""
-      style="background-color: azure"
-    />
-    <img
-      width="9.5%"
-      height="100px"
-      src=""
-      alt=""
-      style="background-color: blueviolet"
-    />
-    <img
-      width="9.5%"
-      height="100px"
-      src=""
-      alt=""
-      style="background-color: brown"
-    />
-    <img
-      width="9.5%"
-      height="100px"
-      src=""
-      alt=""
-      style="background-color: chocolate"
-    />
-    <img
-      width="9.5%"
-      height="100px"
-      src=""
-      alt=""
-      style="background-color: chartreuse"
-    />
-    <img
-      width="9.5%"
-      height="100px"
-      src=""
-      alt=""
-      style="background-color: cornflowerblue"
-    />
-    <img
-      width="9.5%"
-      height="100px"
-      src=""
-      alt=""
-      style="background-color: crimson"
-    />
-    <img
-      width="9.5%"
-      height="100px"
-      src=""
-      alt=""
-      style="background-color: darkred"
-    />
-    <hr />
-    <h2>Who Am I ?</h2>
-    <p><b>Now</b> I Am Learning In Some Courses About Programming And Coding</p>
-    <p>
-      Specificly I Am learning To be <strong>Frontend Web Developer</strong>
-    </p>
-    <p>
-      I Tried To Learned This Course One More Time So It Is
-      <mark>Fourth</mark> Time For Me
-    </p>
-    <p>Again And Again To Make It <u>Easly</u></p>
-    <hr />
-    <h2>What I Learning Now ?</h2>
-    <h3>I Am Learning</h3>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JS</li>
-    </ul>
-    <h3>And Learning Some Frameworks</h3>
-    <ul>
-      <li>Bootstrap</li>
-      <li>Little Of React</li>
-    </ul>
-    <hr />
-    <h3>My Links</h3>
-    <a target="_blank" href="https://www.facebook.com"
-      >This Is My Account On Facebook</a
-    >
-    <hr />
-    <a style="display: block" target="_blank" href="https://www.google.com"
-      >This Site If Want To Search About Me</a
-    >
+  <body style="text-align: center">
+    <header>
+      <h1>Hello Everyone Visted My Site I'm So Happy For That , Thanks</h1>
+      <hr />
+      <figure>
+        <img
+          width="9.5%"
+          height="100px"
+          src=""
+          alt=""
+          style="background-color: aqua"
+        />
+        <img
+          width="9.5%"
+          height="100px"
+          src=""
+          alt=""
+          style="background-color: aquamarine"
+        />
+        <img
+          width="9.5%"
+          height="100px"
+          src=""
+          alt=""
+          style="background-color: azure"
+        />
+        <img
+          width="9.5%"
+          height="100px"
+          src=""
+          alt=""
+          style="background-color: blueviolet"
+        />
+        <img
+          width="9.5%"
+          height="100px"
+          src=""
+          alt=""
+          style="background-color: brown"
+        />
+        <img
+          width="9.5%"
+          height="100px"
+          src=""
+          alt=""
+          style="background-color: chocolate"
+        />
+        <img
+          width="9.5%"
+          height="100px"
+          src=""
+          alt=""
+          style="background-color: chartreuse"
+        />
+        <img
+          width="9.5%"
+          height="100px"
+          src=""
+          alt=""
+          style="background-color: cornflowerblue"
+        />
+        <img
+          width="9.5%"
+          height="100px"
+          src=""
+          alt=""
+          style="background-color: crimson"
+        />
+        <img
+          width="9.5%"
+          height="100px"
+          src=""
+          alt=""
+          style="background-color: darkred"
+        />
+      </figure>
+    </header>
     <hr />
 
-    <!-- ................................... -->
+    <section>
+      <article>
+        <h2>Who Am I ?</h2>
+        <p>
+          <b>Now</b> I Am Learning In Some Courses About Programming And Coding
+        </p>
+        <p>
+          Specificly I Am learning To be <strong>Frontend Web Developer</strong>
+        </p>
+        <p>
+          I Tried To Learned This Course One More Time So It Is
+          <mark>Fourth</mark> Time For Me
+        </p>
+        <p>Again And Again To Make It <u>Easly</u></p>
+      </article>
 
-    <div style="padding: 20px; border: 1px solid black">
-      <h3>For Div</h3>
-      <p>
-        <b>Lorem</b> ipsum dolor, sit amet consectetur adipisicing elit. Hic
-        <span style="background-color: black; color: white">voluptatibus</span>
-        tenetur, dolorem non at ipsum. Minus aperiam explicabo inventore in
-        aspernatur consequatur quas, voluptatibus distinctio sed? Voluptatem
-        facere quis accusantium porro? Accusamus, magni explicabo! Iusto sequi
-        aut harum ratione incidunt veniam est, impedit illum? Placeat nam, illo
-        eos molestiae, cum sint cupiditate atque laboriosam, magnam veniam amet
-        temporibus unde non velit eum mollitia similique quidem voluptatem
-        corporis. Praesentium sunt neque tempore nesciunt natus ipsam
-        repellendus atque? Nesciunt sequi perferendis enim quidem, a modi?
-        Ducimus consectetur, similique asperiores necessitatibus voluptate
-        provident, obcaecati ut atque quibusdam soluta qui commodi praesentium
-        minima ipsum?
-      </p>
-      <p>
-        <mark>Lorem</mark> ipsum dolor sit, amet consectetur
-        <span style="color: blueviolet">adipisicing</span> elit. Quos, vel!
-      </p>
-    </div>
+      <hr />
+      <article>
+        <h2>What I Learning Now ?</h2>
+        <h3>I Am Learning</h3>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JS</li>
+        </ul>
+        <h3>And Learning Some Frameworks</h3>
+        <ul>
+          <li>Bootstrap</li>
+          <li>Little Of React</li>
+        </ul>
+      </article>
+      <hr />
+      <h3>My Links</h3>
+      <a target="_blank" href="https://www.facebook.com"
+        >This Is My Account On Facebook</a
+      >
+      <hr />
+      <a style="display: block" target="_blank" href="https://www.google.com"
+        >This Site If Want To Search About Me</a
+      >
+      <hr />
 
-    <hr />
+      <!-- ................................... -->
 
-    <table
-      border="2px"
-      width="100%"
-      cellspacing="5"
-      cellpadding="20px"
-      style="text-align: center"
-    >
-      <caption style="border: 1px solid black; padding: 15px">
-        OS Group
-      </caption>
+      <div style="padding: 20px; border: 1px solid black">
+        <h3>For Div</h3>
+        <p>
+          <b>Lorem</b> ipsum dolor, sit amet consectetur adipisicing elit. Hic
+          <span style="background-color: black; color: white"
+            >voluptatibus</span
+          >
+          tenetur, dolorem non at ipsum. Minus aperiam explicabo inventore in
+          aspernatur consequatur quas, voluptatibus distinctio sed? Voluptatem
+          facere quis accusantium porro? Accusamus, magni explicabo! Iusto sequi
+          aut harum ratione incidunt veniam est, impedit illum? Placeat nam,
+          illo eos molestiae, cum sint cupiditate atque laboriosam, magnam
+          veniam amet temporibus unde non velit eum mollitia similique quidem
+          voluptatem corporis. Praesentium sunt neque tempore nesciunt natus
+          ipsam repellendus atque? Nesciunt sequi perferendis enim quidem, a
+          modi? Ducimus consectetur, similique asperiores necessitatibus
+          voluptate provident, obcaecati ut atque quibusdam soluta qui commodi
+          praesentium minima ipsum?
+        </p>
+        <p>
+          <mark>Lorem</mark> ipsum dolor sit, amet consectetur
+          <span style="color: blueviolet">adipisicing</span> elit. Quos, vel!
+        </p>
+      </div>
 
-      <thead>
-        <th style="visibility: hidden"></th>
-        <th>Logo</th>
-        <th>Name of Own</th>
-        <th>History</th>
-        <th>color</th>
-        <th>cars</th>
-        <th>Impor Employ</th>
-        <th>Location</th>
-        <th>Many Of Branches</th>
-        <th>Salary</th>
-        <th>Stocks</th>
-      </thead>
+      <hr />
 
-      <tbody>
-        <tr>
-          <td>1970</td>
-          <td>ons</td>
-          <td>Omar</td>
-          <td>719</td>
-          <td>red</td>
-          <td>VolksWagen</td>
-          <td>hr Yaen</td>
-          <td>London</td>
-          <td>3</td>
-          <td>1,000,000$</td>
-          <td>17</td>
-        </tr>
-        <tr>
-          <td>1980</td>
-          <td>ons</td>
-          <td>Omar</td>
-          <td>719</td>
-          <td>red</td>
-          <td>VolksWagen</td>
-          <td>hr Yaen</td>
-          <td>London</td>
-          <td>3</td>
-          <td>1,000,000$</td>
-          <td>17</td>
-        </tr>
-        <tr>
-          <td>1990</td>
-          <td>ons</td>
-          <td>Omar</td>
-          <td>719</td>
-          <td>red</td>
-          <td>VolksWagen</td>
-          <td>hr Yaen</td>
-          <td>London</td>
-          <td>3</td>
-          <td>1,000,000$</td>
-          <td>17</td>
-        </tr>
-        <tr>
-          <td>2000</td>
-          <td>ons</td>
-          <td>Omar</td>
-          <td>719</td>
-          <td>red</td>
-          <td>VolksWagen</td>
-          <td>hr Yaen</td>
-          <td>London</td>
-          <td>3</td>
-          <td>1,000,000$</td>
-          <td>17</td>
-        </tr>
-        <tr>
-          <td>2010</td>
-          <td>ons</td>
-          <td>Omar</td>
-          <td>719</td>
-          <td>red</td>
-          <td>VolksWagen</td>
-          <td>hr Yaen</td>
-          <td>London</td>
-          <td>3</td>
-          <td>1,000,000$</td>
-          <td>17</td>
-        </tr>
-      </tbody>
-      <tfoot>
-        <tr>
-          <td colspan="11">
-            Thank You For Writing That Informations About Our Company , We Are
-            So Happy , So We Will invite You To Make IterView Because We Think
-            You Will Success With Us
-          </td>
-        </tr>
-      </tfoot>
-    </table>
+      <article>
+        <table
+          border="2px"
+          width="100%"
+          cellspacing="5"
+          cellpadding="20px"
+          style="text-align: center"
+        >
+          <caption style="border: 1px solid black; padding: 15px">
+            OS Group
+          </caption>
+
+          <thead>
+            <th style="visibility: hidden"></th>
+            <th>Logo</th>
+            <th>Name of Own</th>
+            <th>History</th>
+            <th>color</th>
+            <th>cars</th>
+            <th>Impor Employ</th>
+            <th>Location</th>
+            <th>Many Of Branches</th>
+            <th>Salary</th>
+            <th>Stocks</th>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>1970</td>
+              <td>ons</td>
+              <td>Omar</td>
+              <td>719</td>
+              <td>red</td>
+              <td>VolksWagen</td>
+              <td>hr Yaen</td>
+              <td>London</td>
+              <td>3</td>
+              <td>1,000,000$</td>
+              <td>17</td>
+            </tr>
+            <tr>
+              <td>1980</td>
+              <td>ons</td>
+              <td>Omar</td>
+              <td>719</td>
+              <td>red</td>
+              <td>VolksWagen</td>
+              <td>hr Yaen</td>
+              <td>London</td>
+              <td>3</td>
+              <td>1,000,000$</td>
+              <td>17</td>
+            </tr>
+            <tr>
+              <td>1990</td>
+              <td>ons</td>
+              <td>Omar</td>
+              <td>719</td>
+              <td>red</td>
+              <td>VolksWagen</td>
+              <td>hr Yaen</td>
+              <td>London</td>
+              <td>3</td>
+              <td>1,000,000$</td>
+              <td>17</td>
+            </tr>
+            <tr>
+              <td>2000</td>
+              <td>ons</td>
+              <td>Omar</td>
+              <td>719</td>
+              <td>red</td>
+              <td>VolksWagen</td>
+              <td>hr Yaen</td>
+              <td>London</td>
+              <td>3</td>
+              <td>1,000,000$</td>
+              <td>17</td>
+            </tr>
+            <tr>
+              <td>2010</td>
+              <td>ons</td>
+              <td>Omar</td>
+              <td>719</td>
+              <td>red</td>
+              <td>VolksWagen</td>
+              <td>hr Yaen</td>
+              <td>London</td>
+              <td>3</td>
+              <td>1,000,000$</td>
+              <td>17</td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <tr>
+              <td colspan="11">
+                Thank You For Writing That Informations About Our Company , We
+                Are So Happy , So We Will invite You To Make IterView Because We
+                Think You Will Success With Us
+              </td>
+            </tr>
+          </tfoot>
+        </table>
+      </article>
+      <hr />
+      <section style="text-align: center">
+        <div>
+          <audio controls muted src="Mahansh Aleik.mp3"></audio>
+          <audio controls muted src="Mahansh Aleik.mp3"></audio>
+          <audio controls muted src="Mahansh Aleik.mp3"></audio>
+          <audio controls muted src="Mahansh Aleik.mp3"></audio>
+        </div>
+        <hr />
+        <div>
+          <video
+            width="720px"
+            height="500"
+            controls
+            muted
+            src="My first Avatar Video.mp4"
+            poster="vlcsnap-2025-01-12-18h32m00s691.png"
+          >
+            <track
+              src="README.md"
+              kind="subtitles"
+              srclang="en"
+              label="English"
+            />
+            <track
+              src="README.md"
+              kind="subtitles"
+              srclang="It"
+              label="Italian"
+            />
+          </video>
+        </div>
+      </section>
+    </section>
   </body>
 </html>
