--- a/index-24-27.html
+++ b/index-24-27.html
@@ -9,5 +9,87 @@
     <meta name="revised" content="thursday , may 1th , 2025 , 04:12 pm" />
     <title>Index-24-27</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div>
+        <h1>This Forms To Practice About It</h1>
+        <p>
+          Many Forms As Subject , Passeword , User Name And Label We Use It For
+          Practice
+        </p>
+      </div>
+    </header>
+
+    <section>
+      <form>
+        <div>
+          <label for="username">User Name</label>
+          <input
+            id="username"
+            type="text"
+            name="username"
+            placeholder="User Name"
+            required
+          />
+        </div>
+
+        <hr />
+
+        <div>
+          <label for="Passeword">Passeword</label>
+          <input
+            id="password"
+            type="password"
+            name="password"
+            placeholder="!14@hjgOs"
+            required
+            minlength="8"
+            maxlength="8"
+          />
+        </div>
+
+        <hr />
+
+        <div>
+          <label for="mobile">Mobile</label>
+          <input
+            id="mobile"
+            type="number"
+            name="number"
+            placeholder="Number"
+            start="0"
+          />
+        </div>
+
+        <hr />
+
+        <div>
+          <label for="email">Email</label>
+          <input id="email" type="email" name="email" placeholder="Email" />
+        </div>
+
+        <hr />
+
+        <div>
+          <label for="subject">Subject</label>
+          <input id="subject" type="text" name="subject" value="HTML" />
+        </div>
+
+        <hr />
+
+        <div>
+          <input type="number" hidden value="9137546018" />
+        </div>
+
+        <hr />
+
+        <input type="submit" name="Submit" />
+        <br />
+        <br />
+        <input type="reset" name="reset" />
+
+        <hr />
+      </form>
+    </section>
+  </body>
 </html>
